# mental-health-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  qlora-train.py  qlora-unsloth.py  requirements.txt  run_training.sh  setup_uv.sh  train_mental_health_llama.py
data/: README.md
mental_health_counseling_conversations/: LICENSE-RAIL-D.txt  README.md
scripts/: qlora_train.py  run_training.sh  setup_uv.sh
src/: export_gguf.py  train.py
